fix multiple issues. row1 tablet; left-align cards tablet; left-align cards desktop; cards h3 spacing desktop; h2 size increase; p size increase; splash bg repeat

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,10 @@ h1, h2, h3, p, a, input, textarea {
 	color: #1f2628;
 }
 
+p {
+	font-size: 18px;
+}
+
 h2 {
 	font-size: 34px;
 }
@@ -143,7 +147,7 @@ h2 {
 }
 
 #ic2 {
-	/*font-size: 11px;*/
+	font-size: 17px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -249,9 +253,10 @@ a {
 .inpoop {
 	padding: 12px 20px;
 	margin: 8px 0;
-	line-height: 1;
+	line-height: 1.4;
 	background-color: #efefef;
 	border: none;
+	font-size: 18px;
 }
 
 textarea {
@@ -318,12 +323,17 @@ footer p {
 		}
 
 	    .rows > img {
-	    	width: auto;
+	    	width: 400px;
 	    }
 
-		#text1 p {
-			font-size: 18px;
-		}
+	    #h2mob {
+	    	width: 400px;
+	    }
+
+	    #text1 {
+	    	width: 400px;
+	    }
+
 
 		.cards {
 			height: auto;
@@ -445,6 +455,14 @@ footer p {
 
 		.card {
 			text-align: left;
+		}
+
+		h3 {
+			margin-bottom: 0;
+		}
+
+		.card p {
+			margin-top: 0; 
 		}
 
 		#about {
